fixed relative path. handled NPE.